# temp-num-bot

./: .gitignore  README.md  pyproject.toml
.idx/: dev.nix
src/: main.py  secret_key_handler.py
src/cook/: main.py
src/reception/: database_manager.py
src/telegram/: bot.py  models.py
src/waiter/: helper.py  helper_phone.py  main.py  message_handler.py  query_handler.py
